--- a/css/app.css
+++ b/css/app.css
@@ -125,3 +125,30 @@ h1 {
 .score-panel .play:hover {
     background-color: #006666;
 }
+
+@media screen and (max-width: 340px) {
+    .deck {
+    width: 320px;
+    min-height: 400px;
+    padding: 25px;
+}
+    
+    .deck .card {
+    width: 60px;
+    height: 60px;
+    }
+    
+    .score-panel {
+        width: 340px;
+        margin: 0 auto;
+    }
+     
+    .score-panel .dados-jogo {
+        font-size: 16px;
+        margin-left: 20px;
+    }
+    
+    .score-panel .restart{
+        margin-right: 20px;
+    }
+}
