--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,47 @@
+/* Media queries */
+@media screen and (max-width: 320px) {
+     h1 {
+      font-size: 1.4em;
+      }
+
+    .deck {
+      width: 90%;
+      height: 320px;
+      padding: 2%;
+    }
+
+    .deck.card {
+      width: 55px;
+      height: 55px;
+      margin: 0px 5px;
+    }
+
+    .score-panel {
+      width: 90%;
+      margin: 2% auto;
+    }
+
+    .score-panel .dados-jogo {
+      font-size: 0.8em;
+      margin-left: 10%;
+    }
+
+    .score-panel .restart{
+      font-size: 1em;
+      padding: 5px;
+      margin: 2% 10%;
+      align-items: center;
+    }
+}
+
+
+@media screen and (min-width: 321px0) and (max-width:500px) {
+    .deck {
+      width: 90%;
+    }
+}
+
+
 html {
     box-sizing: border-box;
 }
@@ -111,48 +155,3 @@ h1 {
     background-color: #1a66ff;
 }
 
-
-@media screen and (min-width: 320px) {
-  h1 {
-     font-size: 1.4em;
-  }
-    .deck {
-      width: 90%;
-      min-height: 90%;
-      padding: 20px;
-}
-
-    .deck .card {
-      width: 55px;
-      height: 55px;
-      margin-bottom: 2%;
-    }
-
-    .score-panel {
-      width: 300px;
-      margin: 2% auto;
-    }
-
-    .score-panel .dados-jogo {
-      font-size: 0.8em;
-      margin-left: 10%;
-    }
-
-    .score-panel .restart{
-      font-size: 1em;
-      padding: 5px;
-      margin: 2% 10%;
-      align-items: center;
-    }
-}
-
-@media screen and (min-width: 321px) and (max-width: 350px) {
-  .deck {
-    width:90%
-    height:60%;
-  }
-  .deck .card{
-    width: 60px;
-    height: 60px;
-  }
-}
